--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "prisma generate && prisma db push && next build",
+    "build": "prisma generate && prisma db push --accept-data-loss && pnpm run prisma:seed && next build",
     "dev": "next dev",
     "lint": "eslint .",
     "start": "next start",
