--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "postinstall": "prisma generate",
-    "build": "prisma db push --accept-data-loss && tsx prisma/seed.ts && next build",
+    "build": "prisma generate && prisma db push && next build",
     "dev": "next dev",
     "lint": "eslint .",
     "start": "next start",
